--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "polymer-filters": "~0.2.1",
-    "polymer-expressions": "polymer/polymer-expressions#~0.5.6"
+    "polymer-expressions": "polymer/polymer-expressions#~0.5.6",
+    "uuid-js": "~0.7.5",
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "*",
