--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.6.3",
+    "gulp-ignore": "1.2.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-html": "^1.0.2",
     "gulp-rename": "^1.2.0",
